--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
   "dependencies": {
     "immutable": ">= 3.7.6",
     "lodash.isequal": "^4.1.2",
+    "normalizr": "^2.2.0",
     "redux-saga": ">= 0.9.5"
   }
 }
