--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "cross-env": "^1.0.7",
+    "deep-freeze": "0.0.1",
     "eslint": "2.10.2",
     "eslint-config-airbnb": "9.0.1",
     "eslint-plugin-flowtype": "^2.2.7",
